# test_project_ozon_parser

./: README.md  pyproject.toml
parsing/: main.py
parsing/pages/: original_links.txt  selected_links.txt
parsing/statistics/: op_statistics.csv
