[tool.poetry]
name = "testprojectforpyshop"
version = "0.1.0"
description = ""
authors = ["Arrcontender <dramman4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.7.1"
scrapy-rotated-proxy = "^0.1.5"
selenium = "^4.6.0"
webdriver-manager = "^3.8.4"
fake-useragent = "^0.1.14"
scrapy-rotating-proxies = "^0.6.2"
undetected-chromedriver = "^3.1.6"
bs4 = "^0.0.1"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
